# nicocast-v2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  copilot-instructions.md  review.md  setup.sh
.cargo/: config.toml
.github/workflows/: build.yml
src/: airplay.rs  config.rs  health.rs  lib.rs  logger.rs  main.rs  p2p.rs  rtsp.rs  video.rs
status_monitor/: nicocast-status.service  nicocast_status.py
tests/: rtsp_handshake.rs
